[gd_scene load_steps=4 format=3 uid="uid://wy1eg3kmeqq7"]

[ext_resource type="Theme" uid="uid://ddip2yriujj48" path="res://resources/theme.tres" id="1_bkle6"]
[ext_resource type="Script" uid="uid://bntuvmj46h7xe" path="res://old/pause.gd" id="1_ol8cc"]
[ext_resource type="PackedScene" uid="uid://bq8dpascomfv3" path="res://old/options_menu.tscn" id="3_pd36b"]

[node name="Pause" type="Control" node_paths=PackedStringArray("options", "pause_menu")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bkle6")
script = ExtResource("1_ol8cc")
main_menu = "res://main_menu.tscn"
options = NodePath("OptionsMenu")
pause_menu = NodePath("PauseMenu")

[node name="PauseMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -76.0
offset_right = 85.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Button2" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to Main Menu"

[node name="OptionsMenu" parent="." instance=ExtResource("3_pd36b")]
visible = false
layout_mode = 1
offset_left = -192.5
offset_top = -133.5
offset_right = 192.5
offset_bottom = 133.5

[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="back_button_pressed" from="OptionsMenu" to="." method="_on_options_menu_back_button_pressed"]
